# runes

./: AGENTS.md  Justfile  README.md
cli/: Cargo.toml  README.md
cli/src/: color.rs  main.rs  user_config.rs
cli/syntaxes/: KDL.sublime-syntax
cli/tests/: workflows.rs
core/: Cargo.toml
core/src/: cache.rs  config.rs  default_schema.kdl  lib.rs  model.rs  schema.rs
core/src/backends/: jujutsu.rs  mod.rs  pijul.rs
docs/: configuration.md  framing.md  schema.md
