[package]
name = "runes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runes-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
kdl = "6.5"
pijul-interaction = "1.0.0-beta.10"
atty = "0.2"
clap = { version = "4.4", features = ["derive"] }
