[package]
name = "runes-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jj-lib = "0.38.0"
libpijul = "1.0.0-beta.11"
anyhow = "1.0.102"
pollster = "0.4.0"
pijul-config = "1.0.0-beta.10"
pijul-identity = "1.0.0-beta.11"
pijul-interaction = "1.0.0-beta.10"
pijul-macros = "1.0.0-beta.11"
pijul-remote = "1.0.0-beta.11"
pijul-repository = "1.0.0-beta.10"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
